# tripleo-ha-utils

./: .gitreview  README.md  plugin.spec  setup.cfg  tox.ini
docs/multi-virtual-undercloud/: README.md  multi-virtual-undercloud-provisioner.sh  multi-virtual-undercloud.sh
infrared/: README.md  infrared_instance-ha_plugin_main.yml
infrared/templates/: ansible_hosts.yml.j2
playbooks/: baremetal-undercloud-validate-ha.yml  baremetal-virt-undercloud-tripleo.yml  overcloud-instance-ha.yml  overcloud-stonith-config.yml  overcloud-validate-ha.yml
rally/: README.md  instance-ha.yml
rally/plugins/: instanceha.py
rally/templates/: instance-ha.yaml.j2
roles/gate-quickstart/tasks/: main.yml
roles/instance-ha/: README.md
roles/instance-ha/defaults/: main.yml
roles/instance-ha/tasks/: apply.yml  main.yml  pre-checks.yml  undo.yml
roles/stonith-config/: README.md
roles/stonith-config/defaults/: main.yml
roles/stonith-config/tasks/: main.yml
roles/stonith-config/templates/: config-stonith-from-instackenv.py.j2  config-stonith-from-instackenv.py.readme  create-stonith-from-instackenv.py.j2
roles/validate-ha/: README.md
roles/validate-ha/defaults/: main.yml
roles/validate-ha/tasks/: ha-test-suite.yml  heat-validation-check.yml  heat-validation-create.yml  heat-validation-delete.yml  heat-validation.yml  main.yml  manage-latency.yml
roles/validate-ha/templates/: validate-ha-heat-environment.yaml.j2  validate-ha-heat-template.yaml.j2  workarounds.sh.j2
roles/validate-ha/vars/: test_list_liberty.yml  (+9 more)
tools/ha-test-suite/: README.md  ha-test-suite.sh
(+19 files in other folders)
