[metadata]
name = tripleo-ha-utils
summary = Give a set of tools to test TripleO HA capabilities
description_file =
long_description_content_type = text/markdown
    README.md
author = Raoul Scarazzini
author_email = rasca@redhat.com
home_page = https://github.com/openstack/tripleo-ha-utils/
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    config = config/*
    playbooks = playbooks/*
    usr/local/share/ansible/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
